# aquabeacon-sim

./: .gitignore  CLAUDE.md  README.md  config.toml  conftest.py  pyproject.toml  requirements.txt  run_all.bat
.github/workflows/: ci.yml
benchmarks/: __init__.py  headline_metrics.json  run_headlines.py
docs/: GLOSSARY.md  MATH_SPEC.md  ROADMAP.md  VISUALIZATION.md
scripts/: _plotstyle.py  run_attitude.py  run_crlb.py  run_deepwater.py  run_depth.py  run_explore.py  run_mapping.py  run_minimum.py  run_no_optical.py  run_opmap.py  run_reliability.py  run_robust.py  run_sbl.py  run_sensitivity.py  run_spec.py  run_switch.py  run_visualize.py
src/: __init__.py  attitude.py  config.py  estimator.py  evaluation.py  geometry.py  results_io.py  rng.py  sensors.py  truth.py
tests/: test_attitude.py  test_covariance.py  test_depth.py  test_geometry.py  test_headline_numbers.py  test_math_cases.py  test_no_optical.py  test_noise_free.py  test_optical.py  test_robust.py  test_roundtrip.py  test_sbl.py  test_sensor_realism.py  test_separation.py  test_spec.py  test_stereo.py  test_switch.py  test_trajectory.py
